fix(): changed header style on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,23 +3,27 @@
   transition: .5s; }
 
 .header {
-  display: flex;
-  justify-content: space-between;
   background-color: transparent;
   border-bottom: thin solid black;
   position: fixed;
   top: 0;
   width: 100%; }
+  .header__containerMenu {
+    display: flex;
+    justify-content: space-between;
+    width: 100%; }
   .header__nav {
     align-self: center; }
+    .header__nav a {
+      text-decoration: none;
+      color: black;
+      font-weight: 700;
+      cursor: pointer; }
+    .header__nav a:hover {
+      color: royalblue; }
     @media screen and (max-width: 500px) {
       .header__nav {
         display: none; } }
-  @media screen and (max-width: 500px) {
-    .header__containerMenu {
-      display: flex;
-      justify-content: space-between;
-      width: 100%; } }
   .header__dropHeader {
     display: none; }
     @media screen and (max-width: 500px) {
@@ -40,15 +44,18 @@
   @media screen and (max-width: 500px) {
     .mainHome__dropdownMenu {
       display: flex;
-      justify-content: space-around;
-      align-items: center;
+      flex-direction: column;
+      align-items: flex-end;
       position: absolute;
       top: 68px;
       background: beige;
       width: 100%;
-      height: 25px; }
+      height: 100vh; }
       .mainHome__dropdownMenu a {
-        text-decoration: none; } }
+        text-decoration: none;
+        margin: 15px;
+        color: black;
+        font-weight: 700; } }
 
 .mainHome__imageBackground {
   width: 100%;
