--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,9 +1,6 @@
 *{scroll-behavior: smooth; transition: .5s;}
 
 .header {
-    display: flex;
-    justify-content: space-between;
-
     background-color: transparent;
 
     border-bottom: thin solid black;
@@ -13,20 +10,30 @@
 
     width: 100%;
 
+    &__containerMenu {
+        display: flex;
+        justify-content: space-between;
+
+        width: 100%;
+    }
+
     &__nav {
         align-self: center;
 
+        a {
+            text-decoration: none;
+            color: black;
+            font-weight: 700;
+
+            cursor: pointer;        
+        }
+
+        a:hover {
+            color: royalblue;
+        }
+
         @media screen and (max-width: 500px) {
             display: none;
-        }
-    }
-
-    @media screen and (max-width: 500px) {
-        
-        &__containerMenu {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
         }
     }
     &__dropHeader {
