--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,8 +5,8 @@
 
         @media screen and (max-width: 500px) {
             display: flex;
-            justify-content: space-around;
-            align-items: center;
+            flex-direction: column;
+            align-items: flex-end;
 
             position: absolute;
             top: 68px;
@@ -14,10 +14,13 @@
             background: beige;
 
             width: 100%;
-            height: 25px;
+            height: 100vh;
 
             a {
                 text-decoration: none;
+                margin: 15px;
+                color: black;
+                font-weight: 700;
             }
 
         }
